fix(VColorPicker): remove extra margin when hide input

--- a/packages/vuetify/src/components/VColorPicker/VColorPickerPreview.sass
+++ b/packages/vuetify/src/components/VColorPicker/VColorPickerPreview.sass
@@ -65,4 +65,3 @@
 .v-color-picker-preview
   align-items: center
   display: flex
-  margin-bottom: $color-picker-preview-margin-bottom
