--- a/packages/vuetify/src/components/VColorPicker/_variables.scss
+++ b/packages/vuetify/src/components/VColorPicker/_variables.scss
@@ -6,7 +6,7 @@ $color-picker-elevation: 2 !default;
 $color-picker-input-font-size: 0.75rem !default;
 $color-picker-input-height: 32px !default;
 $color-picker-input-margin: 8px !default;
-$color-picker-preview-margin-bottom: 24px !default;
+$color-picker-input-margin-top: 24px !default;
 $color-picker-input-margin-bottom: 8px !default;
 
 // VColorPickerSwatch
